tests/fixtures/errors/e0504_self_wire.mimz
// expect: E0504
module M {
  out y: bit
  wire w: bit = w
  y = w
}
